[package]
name = "restic-115"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }

reqwest = { version = "0.12", features = ["json", "multipart", "stream", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4", features = ["derive", "env"] }

chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
parking_lot = "0.12"

# OSS signing + hashing
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
walkdir = "2"
assert_cmd = "2"
predicates = "3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
rand = "0.8"
