[package]
name = "restic-115"
version = "0.2.5"
edition = "2024"
description = "Restic REST backend server for 115 Open Platform storage."
license = "MIT"
repository = "https://github.com/gaoyifan/restic-115"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
tower-http = { version = "0.5", features = ["trace"] }

reqwest = { version = "0.12", features = ["json", "multipart", "gzip", "brotli", "deflate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

clap = { version = "4", features = ["derive", "env"] }

chrono = "0.4"
bytes = "1"
parking_lot = "0.12"
moka = { version = "0.12", features = ["future"] }

# OSS signing + hashing
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
hex = "0.4"
# Database
sea-orm = { version = "1", features = ["sqlx-sqlite", "runtime-tokio", "macros"] }
log = "0.4.29"

[dev-dependencies]
tempfile = "3"
sha2 = "0.10"
walkdir = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
